# sloth

./: .gitignore  .gitmodules  .replit  ANSForthProblems.md  CMakeLists.txt  Dodo.java  README.md  README.txt  REPL.java  core.726  journal.md  replit.nix
4th/: ans.4th  debug.4th  graphics.4th  locals.4th  memory.4th  sloth.4th  sloth.4th.backup  sloth.4th.backup2  sloth.backup.nth  strings.4th  tools.4th  transient.4th
4th/libs/: arrays.4th  memory.4th  sloth_raylib.4th  transient.4th
4th/spp/: e01.4th  e02.4th  e03.4th  e04.4th  e05.4th  e06.4th  e07.4th  e08.4th  e09.4th  e10.4th  e11.4th  ls01.4th  ls02.4th  ls03.4th  ls04.4th  ls05.4th  ls06.4th  ls07.4th  ls08.4th  ls09.4th  ls10.4th  ls11.4th  ls12.4th
examples/: REPL.java
js/: index.js  package-lock.json  package.json
org/jordipbou/sloth/: Dodo.java  sloth.fth
src/: .sloth.h.4047077717~  ans.fth  ans.fth.backup  backup.c  combinators.h  definitions.fth  dictionary.h  forth.h  forth.sloth  ilo.c  ilo.rom  image.sloth  pforth.fth  sloth.c  sloth.h  sloth2.h  sloth3.h  strings.h  symbols.h  test.fth  tests.c  trace.h  tsloth.c  tsloth.h  vm.h
src/org/jordipbou/sloth/: Dodo.java  README.md  sloth.fth
